Fix parallax header shift

--- a/frontend/_public/src/less/_components/forms.less
+++ b/frontend/_public/src/less/_components/forms.less
@@ -98,7 +98,7 @@ input[type="checkbox"] {
 	}
 	.filter-panel--range-info {
 		label {
-			color: #text-color-dark;
+			color: @text-color-dark;
 			font-weight: 300;
 		}
 		label:first-child {
